--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -3,11 +3,16 @@
   <% @items.each do |item| %>
     <tr>
       <td><%= link_to item.name, item_path(item) %></td>
-      <td><%= button_to 'Remove', item_path(item), method: 'delete', data: { confirm: 'Are you sure?' } %></td>
       <td><%= button_to 'Edit', edit_item_path(item), method: 'get'%></td>
+      <td><%= button_to 'Delete', "/items/#{item.id}/delete", method: 'get'%></td>
   <% end %>
 </table>
 <%= link_to "Add an item", new_item_path %>
 
 
-
+<table>
+  <% @deleted_items.each do |item| %>
+    <tr>
+      <td><%= link_to item.name, item_path(item) %></td>
+  <% end %>
+</table>
