--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Items#index</h1>
+<h3>available items</h3>
 <table>
   <% @items.each do |item| %>
     <tr>
@@ -9,10 +10,11 @@
 </table>
 <%= link_to "Add an item", new_item_path %>
 
-
+<h3> Deleted Items </h3>
 <table>
   <% @deleted_items.each do |item| %>
     <tr>
       <td><%= link_to item.name, item_path(item) %></td>
+      <td><%= button_to 'Restore', "/items/#{item.id}/restore", method: 'put'%></td>
   <% end %>
 </table>
